--- a/css/common.less
+++ b/css/common.less
@@ -13,3 +13,10 @@
 
 @import url('common/header/header.less');		//公共头
 @import url('common/footer/footer.less');		//公共底部
+
+@import url('widget/w-category.less');		//主题分类
+@import url('widget/w-order.less');			//主题排序
+@import url('widget/w-filter.less');		//主题筛选
+@import url('widget/w-pages.less');			//分页
+@import url('widget/w-adminbar.less');		//管理操作条
+@import url('widget/w-adminpop.less');		//管理操作弹出面板
