--- a/css/forum/c-fli-footer.less
+++ b/css/forum/c-fli-footer.less
@@ -14,6 +14,36 @@
 	.fr;
 }
 
+.c-commend{
+	.x;
+	margin:20px auto 40px auto;
+	.clearfix;
+
+	.u-top,.u-color,.u-zan,.u-rate{
+		.dbi;margin:0 10px;
+		.fz(12px,16px);
+		.r(2px);
+		padding:4px 8px;
+
+		i{.dbi;.y;.size(16px);margin-right:5px;}
+		.color(@zhblue,@zhblue);
+		border:1px solid @zhblue;
+	}
+
+	.u-top{
+		i{background:url('@{url}forum/top.png') no-repeat 0 0;}
+	}
+	.u-color{
+		i{background:url('@{url}forum/color.png') no-repeat 0 0;}
+	}
+	.u-zan{
+		i{background:url('@{url}forum/heart.png') no-repeat 0 0;}
+	}
+	.u-rate{
+		i{background:url('@{url}forum/rate.png') no-repeat 0 0;}
+	}
+}
+
 .c-panel{
 	.color(#999,#999,@zhblue);
 
