--- a/css/tobe/discuz/discuz-content.less
+++ b/css/tobe/discuz/discuz-content.less
@@ -1,17 +1,17 @@
 //帖子正文内容
 .t_f{
 	.clearfix;
-	.fz(14px,2);
-	.color(#444,@bluex,#c00);
-	a{text-decoration:underline;}
-	embed,img{
+	//.fz(14px,2);
+	//.color(#444,@bluex,#c00);
+	//a{text-decoration:underline;}
+	/*embed,img{
 		max-width:100%;
 	}
 	img{
 		height: auto;
-	}
+	}*/
 	
-	min-height:60px;
+	//min-height:60px;
 
 	hr.l{
 		margin:5px auto;
