--- a/css/forum/c-fli-content.less
+++ b/css/forum/c-fli-content.less
@@ -1,12 +1,136 @@
+//楼层公共
 .c-fli-common{
+	.pr;
 	border-bottom:1px solid #ddd;
-	padding-bottom:10px;
+	padding:10px 0;
 	margin-bottom:10px;
 }
 
-//回帖奖励
-.c-fli-replycredit{
-	.psth{
-		margin-left:0;
+//首楼
+.c-fli-first{
+
+}
+//副楼
+.c-fli{
+
+}
+//内容包裹区
+.c-fli-content{
+
+}
+
+//副标题
+.c-fli-title{
+	.fz(13px);.bold;
+	margin:10px 0 0 0;
+	color:@blue-link;
+}
+
+//提示信息
+.c-fli-tips{
+
+}
+
+//付费
+.c-fli-pay{
+
+}
+
+//分类信息
+.c-fli-custom{
+	margin:10px auto;
+	padding-bottom:10px;
+	.fz(12px,2.5);
+
+	ul{}
+	li{}
+	border-bottom:1px solid #eee;
+	em{
+		background-color:#f2f2f2;
+		.r(2px);
+		padding: 3px 6px;
+		margin-right: 5px;
+		color:#555;
 	}
+	span{
+
+	}
+}
+
+.t_fsz{
+	min-height:auto;
+}
+
+//真实内容区(包含追加)
+.c-fli-primary{
+}
+
+//文字内容区
+.c-fli-article{
+	//文字
+	color:#222;
+	.fz(13px,2);
+
+	//链接
+	a{text-decoration:none;}
+	a:hover{text-decoration:underline;}
+
+	//图片
+	embed,img{max-width:100%;}
+	img{height: auto;}
+
+	//表格
+	table{
+		margin:10px auto;
+		.w(100%);
+	}
+}
+
+//标签
+.c-fli-tag{
+	.none;
+}
+
+//主题操作
+.c-fli-modact{
+	.modact{
+		padding:10px 0;
+	}
+	.color(#888,#888,#222);
+}
+
+//附件
+.c-fli-attachment{
+
+}
+
+//快速回复
+.c-fli-fastreply{
+	.none;
+}
+
+//点评
+.c-fli-cmt{
+	/*margin:10px 20px;
+	border-top:1px solid #ddd;*/
+	.psth{
+		/*background: none;
+		padding:0;
+		margin:0;
+		border-bottom:1px dashed #ddd;
+		padding-bottom:10px;
+		margin-bottom:10px;*/
+		margin-bottom:10px;
+	}
+	.psta{
+		.nobreak;
+	}
+	.pstl{
+		margin-bottom:20px;
+	}
+}
+
+//评分
+.c-fli-rate{
+
 }
