--- a/css/forum/c-fli-header.less
+++ b/css/forum/c-fli-header.less
@@ -1,7 +1,3 @@
-.c-fli-common{
-	.pr;
-}
-
 .c-fli-header{
 	.color(#888,#222,#222);
 	.fz(12px);
@@ -18,9 +14,22 @@
 	.floor{
 		.fr;
 		color:#999;
+
+		.u-settop{
+			.dbi;.y;background:url('@{url}header/icons2.png') no-repeat 0 0;
+			.size(12px,14px);
+			margin-top:-2px;margin-right:3px;
+		    background-position: -210px -147px;
+		}
 	}
 
-}
-.c-fli-floor{
-	.pa;.rt(0,0);
+	.c-fli-replycredit{
+		.fr;
+		margin-right: 10px;
+	    border: 1px solid #ddd;
+	    padding: 2px 5px;
+	    border-radius: 2px;
+	    color: #999;
+	}
+
 }
