--- a/css/global.less
+++ b/css/global.less
@@ -60,8 +60,8 @@
 @import url('tobe/discuz/discuz-sortoption.less');	//分类信息
 @import url('tobe/discuz/discuz-list.less');			//列表页
 @import url('tobe/discuz/discuz-view.less');			//帖子页
-@import url('tobe/discuz/discuz-content.less');		//帖子内容
-@import url('tobe/discuz/discuz-primary.less');		//分类信息
+/*@import url('tobe/discuz/discuz-content.less');		//帖子内容*/
+/*@import url('tobe/discuz/discuz-primary.less');		//分类信息*/
 @import url('tobe/discuz/discuz-post.less');			//发布页
 @import url('tobe/discuz/discuz-editor.less');		//编辑器
 @import url('tobe/discuz/discuz-extend.less');		//扩展条
