--- a/template/default/component/c_fli_footer.htm
+++ b/template/default/component/c_fli_footer.htm
@@ -1,3 +1,45 @@
+<!--{if !IS_ROBOT && $post['first'] && !$_G['forum_thread']['archiveid']}-->
+	<!--{if $post['invisible'] == 0}-->
+
+	<div class="c-commend">
+		<!-- 置顶 -->
+		<!--{if !empty($_G['setting']['magics']['stick'])}-->
+			<a class="u-top" title="置顶" href="home.php?mod=magic&mid=stick&idtype=tid&id=$_G[tid]" id="a_stick" onclick="showWindow(this.id, this.href)"><i></i>置顶</a>
+		<!--{/if}-->
+
+		<!-- 高亮 -->
+		<!--{if !empty($_G['setting']['magics']['highlight'])}-->
+			<a class="u-color" title="高亮" href="home.php?mod=magic&mid=highlight&idtype=tid&id=$_G[tid]" id="a_stick" onclick="showWindow(this.id, this.href)"><i></i>高亮</a>
+		<!--{/if}-->
+
+		<!-- dz:点赞 -->
+		<!--{if ($_G['group']['allowrecommend'] || !$_G['uid']) && $_G['setting']['recommendthread']['status']}-->
+			<!--{if !empty($_G['setting']['recommendthread']['addtext'])}-->
+			<a class="u-zan" id="recommend_add" href="forum.php?mod=misc&action=recommend&do=add&tid=$_G[tid]&hash={FORMHASH}" {if $_G['uid']}onclick="ajaxmenu(this, 3000, 1, 0, '43', 'recommendupdate({$_G['group']['allowrecommend']})');return false;"{else} onclick="showWindow('login', this.href)"{/if} onmouseover="this.title = $('recommendv_add').innerHTML + ' {lang activity_member_unit}$_G[setting][recommendthread][addtext]'" title="{lang maketoponce}">
+				<i></i>推荐
+				<span id="recommendv_add"{if !$_G['forum_thread']['recommend_add']} style="display:none"{/if}>
+					$_G[forum_thread][recommend_add]</span>
+				</a>
+			<!--{/if}-->
+		<!--{/if}-->
+
+		<!-- 评分 -->
+		<!--{if $_G['group']['raterange'] && $post['authorid']}-->
+			<a class="u-rate" href="javascript:;" id="ak_rate" onclick="showWindow('rate', 'forum.php?mod=misc&action=rate&tid=$_G[tid]&pid=$post[pid]', 'get', -1);return false;" title="{lang rate_position}">
+				<i></i>送分
+			</a>
+		<!--{/if}-->
+
+		<!--{hook/viewthread_useraction}-->
+	</div>
+	<!--{/if}-->
+<!--{/if}-->
+
+<div class="u-thread-goto none">
+	<a href="forum.php?mod=redirect&goto=nextoldset&tid=$_G[tid]" title="{lang last_thread}"><img src="{IMGDIR}/thread-prev.png" alt="{lang last_thread}" class="vm" /></a>
+	<a href="forum.php?mod=redirect&goto=nextnewset&tid=$_G[tid]" title="{lang next_thread}"><img src="{IMGDIR}/thread-next.png" alt="{lang next_thread}" class="vm" /></a>
+</div>
+
 <!-- dz:操作面板 -->
 <!--{if !$_G['forum_thread']['archiveid']}-->
 	<div class="c-panel">
