--- a/template/default/component/c_fli_header.htm
+++ b/template/default/component/c_fli_header.htm
@@ -1,6 +1,6 @@
 <!--{if !$post[first]}-->
 	<!-- 头像 -->
-	<a class="avatar" href="home.php?mod=space&uid=$post[authorid]" target="_blank">$post[avatar]</a>
+	<a class="avatar" href="home.php?mod=space&uid=$post[authorid]" target="_blank"><!--{avatar($post[authorid],small)}--></a>
 
 	<!-- 用户名 -->
 	<a class="name" href="home.php?mod=space&uid=$post[authorid]" target="_blank" class="xi2"{if $post[groupcolor]} style="color: $post[groupcolor]"{/if}>$post[author]</a>
@@ -12,7 +12,7 @@
 	<!--{if !IS_ROBOT}-->
 	<span class="floor" id="postnum$post[pid]">
 		<!--{if isset($post[isstick])}-->
-			<img src ="{IMGDIR}/settop.png" title="{lang replystick}" class="vm" /> {lang from} {$post[number]}{$postnostick}
+			<i class="u-settop"></i> {lang from} {$post[number]}{$postnostick}
 		<!--{elseif $post[number] == -1}-->
 			{lang recommend}
 		<!--{else}-->
@@ -23,5 +23,12 @@
 			<!--{/if}-->
 		<!--{/if}-->
 	</span>
+	<!--{/if}-->
+
+	<!-- 回帖奖励获得的奖励 -->
+	<!--{if !$post['first'] && $post['replycredit'] > 0}-->
+		<div class="c-fli-replycredit">
+			{lang replycredit} <b>+{$post['replycredit']}</b> {$_G['setting']['extcredits'][$_G['forum_thread']['replycredit_rule']['extcreditstype']][unit]}{$_G['setting']['extcredits'][$_G['forum_thread']['replycredit_rule']['extcreditstype']][title]}
+		</div>
 	<!--{/if}-->
 <!--{/if}-->
