单页PC完成 适配1/2

--- a/css/common.less
+++ b/css/common.less
@@ -1,7 +1,11 @@
 @import url('public/base.less');		//函数
 @import url('public/path.less');		//路径
+@import url('public/shape.less');		//形状
+@import url('public/animation.less');	//动画
+
 @import url('global/var.less');			//常量
 @import url('global/color.less');		//配色
+@import url('global/tips.less');		//提醒
 
 @import url('global/font.less');		//默认字体
 @import url('global/layout.less');		//默认布局
@@ -14,9 +18,15 @@
 @import url('common/header/header.less');		//公共头
 @import url('common/footer/footer.less');		//公共底部
 
+@import url('forum/reset.less');		
+
+@import url('widget/w-route.less');			//面包屑
 @import url('widget/w-category.less');		//主题分类
 @import url('widget/w-order.less');			//主题排序
 @import url('widget/w-filter.less');		//主题筛选
 @import url('widget/w-pages.less');			//分页
 @import url('widget/w-adminbar.less');		//管理操作条
 @import url('widget/w-adminpop.less');		//管理操作弹出面板
+@import url('widget/w-tgpost.less');		//折叠楼层
+@import url('widget/w-fastpost.less');		//快速回复
+@import url('widget/w-rate.less');			//评分窗口
