--- a/css/forum.less
+++ b/css/forum.less
@@ -2,6 +2,7 @@
 @import url('public/path.less');		//路径
 @import url('global/var.less');			//常量
 @import url('global/color.less');		//配色
+@import url('global/tips.less');		//提醒
 
 @import url('ui/button.less');			//按钮
 
@@ -15,7 +16,11 @@
 
 @import url('forum/c-fli-header.less');		
 @import url('forum/c-fli-footer.less');		
-@import url('forum/c-fli-content.less');		
+@import url('forum/c-fli-content.less');	
 
+@import url('forum/i-viewpage.less');		
+
+@import url('forum/ipad.less');		
+@import url('forum/mobile.less');		
 
 @import url('portal/group.less');		//群组
