--- a/css/widget/w-fastpost.less
+++ b/css/widget/w-fastpost.less
@@ -1,3 +1,11 @@
 .w-fastpost{}
 .w-fastpost-view{}
 .w-fastpost-tip{}
+
+
+.ua-responsive{
+	.screen-m,.screen-s{
+		#f_pst .pls{.none;}
+		#f_pst .plc{padding:0;}
+	}
+}
