--- a/template/default/forum/viewthread_bottom.htm
+++ b/template/default/forum/viewthread_bottom.htm
@@ -1,3 +1,6 @@
+<!-- jx3pve:w-tdpost -->
+<!--{subtemplate widget/w_tgpost}-->
+
 <!-- dz:admin bar -->
 <div class="w-adminbar-bottom">
 	<!--{subtemplate widget/w_adminbar}-->
