--- a/css/common/header/mobile.less
+++ b/css/common/header/mobile.less
@@ -15,8 +15,8 @@
 	}
 
 	.i-header-back{
-		.pa;.lt(10px,0);
-		padding-right:5px;
+		.pa;.lt(0,0);
+		padding:0 20px;
 
 		i{
 			.dbi;
@@ -30,6 +30,7 @@
 		span{
 			padding-left:24px;
 			.fz(14px);.bold;
+			.none;
 		}
 	}
 
@@ -71,3 +72,5 @@
 
 .i-header{.none;}
 .ua-responsive .screen-s .i-header{.db;}
+
+
