--- a/css/forum/c-forum-layout.less
+++ b/css/forum/c-forum-layout.less
@@ -15,3 +15,13 @@
 .default-content{
 	margin-left:@sd + 20px;
 }
+
+.ua-responsive .screen-s{
+	.default-sidebar{
+		//.pf;.lt(0,90px);
+		.none;
+	}
+	.default-content{
+		margin-left:0;
+	}
+}
