--- a/css/global.less
+++ b/css/global.less
@@ -53,20 +53,22 @@
 
 /*discuz 默认样式重置
 ------------------------------------------*/
-@import url('tobe/discuz/discuz-reset.less');		//基础重置
-@import url('tobe/discuz/discuz-block.less');		//块级样式
-@import url('tobe/discuz/discuz-button.less');		//按钮
-/*@import url('tobe/discuz/discuz-route.less');		//面包屑位置*/
-@import url('tobe/discuz/discuz-sortoption.less');	//分类信息
+/*@import url('tobe/discuz/discuz-reset.less');		//基础重置*/
+/*@import url('tobe/discuz/discuz-block.less');		//块级样式*/
+/*@import url('tobe/discuz/discuz-button.less');		//按钮*/
+@import url('tobe/discuz/discuz-route.less');		//面包屑位置
+/*@import url('tobe/discuz/discuz-sortoption.less');	//分类信息*/
 @import url('tobe/discuz/discuz-list.less');			//列表页
+
 @import url('tobe/discuz/discuz-view.less');			//帖子页
-/*@import url('tobe/discuz/discuz-content.less');		//帖子内容*/
+@import url('tobe/discuz/discuz-content.less');		//帖子内容
+
 /*@import url('tobe/discuz/discuz-primary.less');		//分类信息*/
 @import url('tobe/discuz/discuz-post.less');			//发布页
 @import url('tobe/discuz/discuz-editor.less');		//编辑器
 @import url('tobe/discuz/discuz-extend.less');		//扩展条
 @import url('tobe/discuz/discuz-admin.less');		//门户管理
-@import url('tobe/discuz/discuz-rate.less');			//评分窗口
+/*@import url('tobe/discuz/discuz-rate.less');			//评分窗口*/
 
 
 /*custom DZ自定义模块
@@ -76,20 +78,21 @@
 
 @import url('tobe/custom/c-star.less');				//评分模块
 /*@import url('tobe/custom/c-panel.less');				//操作条*/
-/*@import url('tobe/custom/c-author.less');			//楼主
-@import url('tobe/custom/c-replyer.less');			//回复人*/
+@import url('tobe/custom/c-author.less');			//楼主
+@import url('tobe/custom/c-replyer.less');			//回复人
 
 @import url('tobe/custom/w-route.less');				//路径面包屑
 /*@import url('tobe/custom/w-pages.less');				//分页*/
 
-/*@import url('tobe/custom/w-category-nav.less');		//分类导航*/
-/*@import url('tobe/custom/w-order.less');				//排序*/
-/*@import url('tobe/custom/w-filter.less');			//字段筛选*/
+/*@import url('tobe/custom/w-category-nav.less');		//分类导航
+@import url('tobe/custom/w-order.less');				//排序
+@import url('tobe/custom/w-filter.less');			//字段筛选*/
+
 @import url('tobe/custom/s-filter.less');			//侧边栏筛选(font)
 
 @import url('tobe/custom/w-lastedit-th.less');		//最后更新头
 
-@import url('tobe/custom/w-index-tg.less');			//首页开关
+/*@import url('tobe/custom/w-index-tg.less');			//首页开关*/
 @import url('tobe/custom/w-listnull-tips.less');		//无内容提示
 
 @import url('tobe/custom/w-hotstar.less');			//评星
