--- a/css/system/system.less
+++ b/css/system/system.less
@@ -61,7 +61,7 @@
 
 
 //网站地图
-.sitemap-container #pt{margin-bottom:10px !important;}
+.sitemap-container {padding:10px 0;}
 .m-sitemap-block{
 	margin-bottom:10px;
 	padding-left:80px;
