--- a/template/default/forum/forum_header_view.htm
+++ b/template/default/forum/forum_header_view.htm
@@ -1,8 +1,60 @@
-<link rel="stylesheet" href="http://css.jx3pve.com/css/forum.css" type="text/css" />
+<link rel="stylesheet" href="http://test.jx3pve.com/css/forum.css" type="text/css" />
 <header class="i-header">
-	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i>返回</a>
-	<div class="i-header-title">版块标题</div>
+	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i><span>返回</span></a>
+	<div class="i-header-title">$_G['forum'][name]</div>
+	<div class="i-header-view">
+		<!-- 只看楼主 -->
+		<!--{if $post['invisible'] == 0}-->
+			<!--{if !IS_ROBOT && !$_GET['authorid'] && !$_G['forum_thread']['archiveid']}-->
+				<a class="u-only" href="forum.php?mod=viewthread&tid=$post[tid]&page=$page&authorid=$_G[forum_thread][authorid]" rel="nofollow"><span>楼主</span></a>
+			<!--{elseif !$_G['forum_thread']['archiveid']}-->
+				<a class="u-only on" href="forum.php?mod=viewthread&tid=$post[tid]&page=$page" rel="nofollow"><span>取消</span></a>
+			<!--{/if}-->
+		<!--{/if}-->
+
+		<!-- 更多 -->
+		<a href="javascript:;" class="u-all" id="i-viewpage-menu-tg"><span>更多</span></a>
+	</div>
 </header>
+<div class="i-viewpage-menu" id="i-viewpage-menu">
+	<!-- 收藏 -->
+	<div class="i-maskmenu-li i-maskmenu-li-fav">
+		<a class="i-maskmenu-li-wrapper u-fav" href="home.php?mod=spacecp&ac=favorite&type=thread&id=$_G[tid]&formhash={FORMHASH}" id="k_favorite" onclick="showWindow(this.id, this.href, 'get', 0);" onmouseover="this.title = $('favoritenumber').innerHTML + ' {lang activity_member_unit}{lang thread_favorite}'" title="{lang fav_thread}">收藏</a>
+	</div>
+
+	<!-- 楼层跳转 -->
+	<!-- <div class="i-maskmenu-li i-maskmenu-li-goto">
+		<div class="i-maskmenu-li-wrapper u-goto">
+			<label class="z">跳转楼层</label>
+			<input type="text" class="px p_fre z" size="2" onkeyup="$('fj_btn').href='forum.php?mod=redirect&ptid=$_G[tid]&authorid=$_GET[authorid]&postno='+this.value" onkeydown="if(event.keyCode==13) {window.location=$('fj_btn').href;return false;}" title="{lang thread_redirect_postno_tips}" />
+			<a href="javascript:;" class="z" title="{lang thread_redirect_postno_tips}"><img src="{IMGDIR}/fj_btn.png" alt="{lang thread_redirect_postno_tips}" class="vm" /></a>
+		</div>
+	</div> -->
+
+	<!-- 举报 -->
+	<!--{if $post['authorid'] != $_G['uid']}-->
+	<div class="i-maskmenu-li i-maskmenu-li-report">
+		<a class="i-maskmenu-li-wrapper  u-report" title="举报" href="javascript:;" onclick="showWindow('miscreport$post[pid]', 'misc.php?mod=report&rtype=post&rid=$post[pid]&tid=$_G[tid]&fid=$_G[fid]', 'get', -1);return false;">{lang report}</a>
+	</div>
+	<!--{/if}-->
+
+	<!-- 倒序 -->
+	<div class="i-maskmenu-li i-maskmenu-li-viewmode">
+		<!--{if !$rushreply}-->
+			<!--{if $ordertype != 1}-->
+				<a href="forum.php?mod=viewthread&tid=$_G[tid]&extra=$_GET[extra]&ordertype=1"  class="i-maskmenu-li-wrapper u-descending" title="倒序浏览 - 最后发布的靠前"><i></i><span>倒序查看</span></a>
+			<!--{else}-->                     
+				<a href="forum.php?mod=viewthread&tid=$_G[tid]&extra=$_GET[extra]&ordertype=2"  class="i-maskmenu-li-wrapper u-descending" title="正序浏览 - 最早发布的靠前"><i></i><span>正序查看</span></a>
+			<!--{/if}-->
+		<!--{/if}-->
+	</div>
+
+	<!-- 取消 -->
+	<div class="i-maskmenu-li i-maskmenu-li-cancel">
+		<a href="javascript:;" class="i-maskmenu-li-wrapper u-cancel" id="i-maskmenu-cancel">取消</a>
+	</div>
+
+</div>
 <div class="viewpage-container f-$_G[fid]-container">
 	<div class="wp">
 		<div id="pt" class="bm cl">
