单页适配与移动端适配规范分离

--- a/css/about/common.less
+++ b/css/about/common.less
@@ -15,7 +15,7 @@
             }
             a{
                 .db;padding:0 30px;
-                .fzlh(12px,40px);
+                .lh(40px);
             }
             i{
                 .db;.pa;.lt(-7px,9px);
@@ -26,8 +26,8 @@
             }
             strong{
                 .pa;.lt(-120px,0);
-                .size(100px,40px);overflow:hidden;
-                .fz(12px, 40px);
+                .w(100px);overflow:hidden;
+                .lh(40px);
                 .color(#666);
                 .x;
                 //font-family:Helvetica,Tahoma,Consolas;
@@ -36,7 +36,7 @@
                 .db;padding:0 30px;
                 color:#777;
                 transition:0.2s ease-in-out;
-                .fz(12px,2);
+                line-height:2;
                 .pr;
                  &:after{
                     content:'';
