--- a/css/about/contact.less
+++ b/css/about/contact.less
@@ -1,8 +1,8 @@
 .contact-container{
 	h2{
 		margin-bottom:10px;
-		border-bottom:1px solid #eee;
-		.fz(12px,2.5);
+		//border-bottom:1px solid #eee;
+		line-height:2.5;
 	}
 }
 .m-about-union{
@@ -29,7 +29,7 @@
 	.clearfix;
 	a{
 		.db;.x(right);
-		.fz(13px,80px);
+		line-height:80px;
 		padding:0 20px 0 120px;
 		border-radius:10px;
 		margin-right:60px;
