--- a/css/about/links.less
+++ b/css/about/links.less
@@ -6,7 +6,7 @@
 		.fl;margin:0 20px;
 	}
 	li{
-		.fz(12px,2.5);
+		line-height:2.5;
 		list-style:square;
 	}
 	a:hover{
@@ -16,4 +16,5 @@
 .m-about-links-add{
 	margin-top:10px;
 	.clear;
+	padding:0 10px;
 }
