--- a/css/about/text.less
+++ b/css/about/text.less
@@ -1,11 +1,11 @@
 .m-about-copyright,.m-about-disclaimer{
 	.m-title{
-		.fz(16px,2);
+		font-size:16px;
 		//border-bottom:1px dotted #ddd;
 		.x;
 	}
 	.m-content{
-		.fz(12px,2.2);
+		line-height:2.2;
 		p{text-indent:24px;margin-bottom:5px;}
 	}
 }
