--- a/css/common.less
+++ b/css/common.less
@@ -10,15 +10,15 @@
 @import url('global/font.less');		//默认字体
 @import url('global/layout.less');		//默认布局
 
+@import url('common/c-header/c-header.less');		//公共头
+@import url('common/c-footer/c-footer.less');		//公共底部
+@import url('common/i-header/i-header.less');		//移动公共头
+@import url('common/i-footer/i-footer.less');		//移动公共底部
+
 @import url('ui/button.less');			//按钮
 @import url('ui/form.less');			//表单
 @import url('ui/route.less');			//面包屑
 @import url('ui/tab.less');				//tab卡
-
-@import url('common/header/header.less');		//公共头
-@import url('common/footer/footer.less');		//公共底部
-
-@import url('forum/reset.less');		
 
 @import url('widget/w-route.less');			//面包屑
 @import url('widget/w-category.less');		//主题分类
@@ -27,6 +27,10 @@
 @import url('widget/w-pages.less');			//分页
 @import url('widget/w-adminbar.less');		//管理操作条
 @import url('widget/w-adminpop.less');		//管理操作弹出面板
+@import url('widget/w-stamp.less');			//图章
 @import url('widget/w-tgpost.less');		//折叠楼层
 @import url('widget/w-fastpost.less');		//快速回复
 @import url('widget/w-rate.less');			//评分窗口
+
+
+@import url('forum/reset.less');	
