--- a/css/common/c-footer/all.less
+++ b/css/common/c-footer/all.less
@@ -5,7 +5,7 @@
 
 .c-footer{
 	font-family:"Trebuchet MS",'Helvetica Neue',Helvetica,Arial,sans-serif;
-	.fz(12px,2.2);
+	line-height:2.2;
 	padding:20px 0;
 	border-top:1px solid #eee;
 	background-color:#fefefe;
