--- a/css/common/c-footer/c-footer.less
+++ b/css/common/c-footer/c-footer.less
@@ -1,6 +1,6 @@
 @import url('all.less');
-@import url('iframe.less');
 @import url('float.less');
 @import url('alert.less');
-@import url('responsive.less');
+@import url('iframe.less');
+@import url('ipad.less');
 @import url('mobile.less');
