--- a/css/common/c-footer/float.less
+++ b/css/common/c-footer/float.less
@@ -7,7 +7,7 @@
     border-right-color:#eee;
 	ul{
 		li{
-			.size(32px);.fz(12px,32px);.x;
+			.size(32px);//.fz(12px,32px);.x;
 			margin-bottom:5px;
 		}
 		a{
