--- a/css/common/c-header/c-header.less
+++ b/css/common/c-header/c-header.less
@@ -1,8 +1,8 @@
 @import url('all.less');
-@import url('menu.less');
 @import url('search.less');
+@import url('menu.less');
 @import url('userstatus.less');
-@import url('iframe.less');
 @import url('nav.less');
-@import url('responsive.less');
+@import url('iframe.less');
+@import url('ipad.less');
 @import url('mobile.less');
