--- a/css/common/i-header/i-header-view.less
+++ b/css/common/i-header/i-header-view.less
@@ -1,13 +1,6 @@
 .i-viewpage-menu{
 	.none;
 }
-.ua-responsive .screen-s{
-	.i-viewpage-menu{
-		//.db;
-	}
-}
-
-//#u-mask{.db !important;}
 
 .i-header-view{
 	.pa;.rt(0,0);
@@ -16,10 +9,10 @@
 		.fl;
 		border:1px solid #eee;
 		.r(2px);
+		.fz(13px,18px);
 		padding:2px 8px;
-		line-height:16px;
-		margin-top:13px;
-		margin-right:12px;
+		margin-top:12px;
+		margin-right:20px;
 
 		&.on{
 			background-color:@basecolor;
@@ -33,6 +26,7 @@
 		.size(32px,24px);
 		background:~"url('@{url}forum/i-menu-more.svg') no-repeat 0 0 / auto 100%";
 		margin-top:11px;
+		padding-right:10px;
 	}
 }
 
