--- a/css/forum.less
+++ b/css/forum.less
@@ -1,5 +1,6 @@
 @import url('public/base.less');		//函数
 @import url('public/path.less');		//路径
+
 @import url('global/var.less');			//常量
 @import url('global/color.less');		//配色
 @import url('global/tips.less');		//提醒
@@ -8,19 +9,15 @@
 
 @import url('forum/c-forum-layout.less');
 @import url('forum/c-forum-top.less');		
-@import url('forum/c-forum-bottom.less');			//帖子上方
+@import url('forum/c-forum-bottom.less');
 
-@import url('forum/c-forum-title.less');		//帖子标题
-@import url('forum/c-forum-mark.less');			//帖子追加
-@import url('widget/w-stamp.less');				//图章
+@import url('forum/c-forum-title.less');
+@import url('forum/c-forum-mark.less');
 
 @import url('forum/c-fli-header.less');		
 @import url('forum/c-fli-footer.less');		
+@import url('forum/c-fli-pay.less');	
 @import url('forum/c-fli-content.less');	
-
-@import url('forum/i-viewpage.less');		
-
-@import url('forum/ipad.less');		
-@import url('forum/mobile.less');		
+@import url('forum/c-fli-primary.less');	
 
 @import url('portal/group.less');		//群组
