--- a/css/global/font.less
+++ b/css/global/font.less
@@ -1,18 +1,23 @@
 body{
     font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif,"宋体";
     font-size: 13px;
-    line-height: 1.7;
+    line-height: 2;
     word-wrap: break-word;
     color: #222;
     background-color: #fff;
     -webkit-font-smoothing: subpixel-antialiased;
 }
 ::selection{
-	color:#fff;background-color:@blue-link;
+	color:#fff;
+    background-color:@blue-link;
 }
 a {
 	//color:#444;
 }
 a:hover {
 	//color:@blue-link;text-decoration: none;
+}
+
+.ua-responsive .screen-s{
+    font-size: 1rem;
 }
