--- a/css/global/tips.less
+++ b/css/global/tips.less
@@ -1,8 +1,6 @@
-
-
 .tips(yel){
-	border: 1px solid #f0ea8e;
-  	background-color: #fffddf;
+	border: 1px solid #FFD403;
+  	background-color: #FFF897;
 }
 
 .tips(grays){
