--- a/css/tobe/discuz/discuz-view.less
+++ b/css/tobe/discuz/discuz-view.less
@@ -1,5 +1,5 @@
 //管理
-.w-post-adminbar{
+/*.w-post-adminbar{
 	padding:5px 10px !important;
 	margin-bottom:5px;
 	background-color: #f2f2f2;
@@ -7,40 +7,11 @@
 	a{
 		color:#555;
 	}
-}
+}*/
 
 
 //快速回复
-#f_pst{
-	.pls{
-		background:none;border:none;
-		.avatar{
-			.size(118px);padding:5px;
-			border:1px solid #ddd;
-			margin-top:20px;
-			img{
-				/*padding:5px;border:1px solid #0099ff;
-				border-radius:4px;*/
-				background: none;
-				.full;
-				padding:0;
-			}
-		}
-	}
-	.plc{
-		padding:15px;
-		.cl{
-			#fastsmiliesdiv{.none;}
-		}
-		.hasfsl{
-			margin-right: 0;
-		}
-	}
-	#fastpostsubmit{
-		line-height: 2;
-  		height: 28px;
-	}
-}
+
 
 //表格布局
 #postlist{
