--- a/template/default/forum/forum_header_view.htm
+++ b/template/default/forum/forum_header_view.htm
@@ -13,7 +13,7 @@
 		<!--{/if}-->
 
 		<!-- 更多 -->
-		<a href="javascript:;" class="u-all" id="i-viewpage-menu-tg"><span>更多</span></a>
+		<a class="u-all" id="i-viewpage-menu-tg" href="javascript:;"><span>更多</span></a>
 	</div>
 </header>
 <div class="i-viewpage-menu" id="i-viewpage-menu">
