--- a/template/yylmacro/portal/portal_topic_sitemap.htm
+++ b/template/yylmacro/portal/portal_topic_sitemap.htm
@@ -1,7 +1,7 @@
 <!--{subtemplate common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/system/system.css" type="text/css" />
 <header class="i-header">
-	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i>返回</a>
+	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i><span>返回</span></a>
 	<div class="i-header-title">站点地图</div>
 </header>
 <div class="system-container sitemap-container">
@@ -125,7 +125,7 @@
 			</ul>
 			<ul>
 				<li><a href="./misc.php?mod=stat">站点统计<span>(PC版)</span></a></li>
-				<li><a href="./archiver">Archiver</a></li>
+				<li><a href="./archiver">Archiver<span>(PC版)</span></a></li>
 			</ul>
 		</div>
 
