--- a/css/about/index.less
+++ b/css/about/index.less
@@ -1,11 +1,10 @@
 //首页
 .m-about-index{
 	h2{
-		.fz(12px,2);.bold;
+		.bold;
 		margin:10px 0;
 	}
 	.m-intro{
-		.fz(12px,2);
 		.indent(24px);
 		padding:10px;
 		color:#555;
