--- a/css/about/join.less
+++ b/css/about/join.less
@@ -15,7 +15,7 @@
 		}
 	}
 	.default{
-		.fzlh(12px,40px);
+		.lh(40px);
 		*{
 			.db;.fl;.w(18%);
 			.indent(10px);
@@ -38,7 +38,7 @@
 	.details{
 		.db;
 		border-top:1px dotted #ddd;
-		.fz(12px,2.5);
+		line-height:2.5;
 		padding:10px;
 		.none;
 	}
