--- a/css/about/member.less
+++ b/css/about/member.less
@@ -10,7 +10,7 @@
 
 			.author{
 				.fr;margin-left:20px;
-				.fz(13px,2);.x;
+				.x;
 				a{.db;}
 				.avt{
 					.db;
@@ -31,11 +31,10 @@
 				letter-spacing:0.5px;
 				em{margin-right:10px;}
 				b{color:#666;}
-				.fz(12px,2.5);
+				line-height:2.5;
 
 			}
 			.details{
-				.fz(12px,2);
 				color:#666;
 				.indent(24px);
 				padding:0 20px;
