--- a/css/forum/c-forum-mark.less
+++ b/css/forum/c-forum-mark.less
@@ -1,4 +1,3 @@
-
 .c-forum-replycredit{
 	
 	&#pl_top{border-top:none;}
@@ -9,7 +8,7 @@
 		//.y;margin-top: -1px;
 	}
 
-	.fz(12px,26px);
+	line-height:26px;
 
 	color:#999;
 
