--- a/css/forum/c-forum-title.less
+++ b/css/forum/c-forum-title.less
@@ -19,16 +19,12 @@
 
 	.u-only,.u-fav{
 		.fr;
-		/*background-color: @blue-link;
-   		color: #fff;*/
    		margin-left:5px;
 	    border-radius: 2px;
 	    padding: 0 8px;
 	    border:1px solid #999;
 	    color:#666;
 	    &:hover,&.on{
-	    	/*color:#fff;
-	    	background-color:darken(@blue-link, 10%);*/
 	    	color:@blue-link;
 	    	border-color:@blue-link;
 	    }
@@ -46,8 +42,6 @@
 	.c-forum-title-meta-left{.fl;.clearfix;}
 	.c-forum-title-meta-right{.fr;.clearfix;}
 
-	.fz(12px,24px);
-
 	//隐藏发布时间
 	.u-posttime{.none;}
 
@@ -59,7 +53,6 @@
 		margin-left:10px;
 	}
 	
-
 	.u-author{
 		margin-right:2px;
 		img{.size(20px);.r(2px);.y;}
@@ -103,6 +96,7 @@
 			.dbi;.y;
 			.size(16px);
 			margin-right:3px;
+		    margin-top: -2px;
 		}
 		&:hover{
 			color:@zhblue;
@@ -112,20 +106,6 @@
 			//.none;
 		}
 	}
-
-	/*.u-top{
-		i{.size(10px,10px);background-position:-134px -22px; }
-		&:hover i{
-			background-position: -134px -37px;
-		}
-	}
-
-	.u-color{
-		i{.size(7px,10px);background-position: -56px -22px;margin-right: 5px; }
-		&:hover i{
-			background-position: -56px -37px;
-		}
-	}*/
 
 	.u-report{
 		.none;
@@ -137,6 +117,10 @@
 		i{
 			background:url('@{url}forum/descending.png') no-repeat 0 0;
 		}
+	}
+
+	.u-print{
+		i{background:url('@{url}forum/print.png') no-repeat 0 0;}
 	}
 
 	.u-share{
@@ -178,13 +162,9 @@
 		#fj label, #fj input{.lh(24px);}
 		#fj input{.w(60px);}
 	}
-
-	.u-print{
-		i{background:url('@{url}forum/print.png') no-repeat 0 0;}
-	}
-
 }
 
+//ipad
 .ua-responsive .screen-m{
 	.c-forum-title-meta-left,.c-forum-title-meta-right{
 		float:none;
@@ -194,7 +174,9 @@
 	}
 }
 
+//mobile
 .ua-responsive .screen-s{
+	.c-forum-title-subject .u-subject{font-size:1.2rem;}
 	.c-forum-title-subject .u-only, .c-forum-title-subject .u-fav{.none;}
 	.c-forum-title-meta .u-view, .c-forum-title-meta .u-reply{.none;}
 	.c-forum-title-meta-right{.none;}
