--- a/css/system/system.less
+++ b/css/system/system.less
@@ -61,7 +61,10 @@
 
 
 //网站地图
-.sitemap-container {padding:10px 0;}
+.sitemap-container {
+	padding:10px 0;
+	#pt{margin-bottom:10px;}
+}
 .m-sitemap-block{
 	margin-bottom:10px;
 	padding-left:80px;
