--- a/css/tobe/discuz/discuz-route.less
+++ b/css/tobe/discuz/discuz-route.less
@@ -5,11 +5,11 @@
 	border: none;
 	padding:5px 0;
 }
-.pg_portalcp,.pg_stat{
+/*.pg_portalcp,.pg_stat{
 	#pt{
 		#pt();
 	}
-}
+}*/
 .pg_spacecp,.pg_index,.pg_space,.pg_task,.pg_faq,.pg_guide,.pg_follow,.pg_medal,.pg_magic,.pg_invite,.pg_comment,.user-container,
 .pg_luckypost
 {
