--- a/css/widget/w-fastpost.less
+++ b/css/widget/w-fastpost.less
@@ -1,11 +1,57 @@
-.w-fastpost{}
-.w-fastpost-view{}
-.w-fastpost-tip{}
+.w-fastpost{
+	
+}
+.w-fastpost-tip{
+	.attips{
+		border:1px solid #ddd;
+		.r(2px);
+		padding:2px 10px;
+		b{.bold;.color(#f39);}
+	}
+}
+.w-fastpost-box{
+	.pr;
+}
+.w-fastpost-sidebar{
+	.fl;
 
+	.avatar{
+		margin-top:0 !important;
+		img{
+			.size(118px);padding:5px;
+			border:1px solid #ddd;
+			background:#fff;
+		}
+	}
+}
+.w-fastpost-content{
+	margin-left:118px + 10px + 20px;
+	margin-top:15px;
+
+	#fastsmiliesdiv{.none;}
+	.hasfsl{margin-right:0;}
+}
+.w-fastpost-button{
+	margin-top:10px;
+	.pn{
+		height:auto;
+		padding:0 10px;
+	}
+}
 
 .ua-responsive{
+	//ipad
 	.screen-m,.screen-s{
-		#f_pst .pls{.none;}
-		#f_pst .plc{padding:0;}
+		.w-fastpost-sidebar{.none;}
+		.w-fastpost-content{margin-left:0;}
+	}
+	//mobile
+	.screen-s{
+		.w-fastpost-button{
+			.y,label{.none;}
+			.pn{
+				.w(100%);
+			}
+		} 
 	}
 }
