--- a/template/yylmacro/portal/portalcp_pushnews.htm
+++ b/template/yylmacro/portal/portalcp_pushnews.htm
@@ -1,7 +1,7 @@
 <!--{template common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/portal/push.css" type="text/css" />
 <header class="i-header">
-	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i>返回</a>
+	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i><span>返回</span></a>
 	<div class="i-header-title">推送头条</div>
 </header>
 <div class="push-container">
